<resources>
    <string name="app_name">Week-Ten-Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moments">Moments</string>
    <string name="latest_posts">Latest Posts</string>
    <string name="post_app">Post App</string>
    <string name="post">Post</string>
    <string name="title">Title</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="post_body">post body</string>
    <string name="_5_likes">5 likes</string>
    <string name="_15_comments">15 comments</string>
    <string name="post_title">Post title</string>
    <string name="userid">userId</string>
    <string name="email">email</string>
    <string name="offline">No internet access, please turn on your Internet</string>
    <string name="error">Error fetching data</string>
</resources>