<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddPost">

    <ImageButton
        android:id="@+id/closeAddPost"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_clear_24"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/submitPostBtn"
        android:layout_marginStart="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitPostBtn"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/post"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/float_button"
        android:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submitPostBtn"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/title"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputPostTxt"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:hint="@string/what_s_on_your_mind"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:background="@drawable/text_input_field"/>


</androidx.constraintlayout.widget.ConstraintLayout>