<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/postCardView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="30dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_image_one_round"
                android:background="@drawable/rounded_post_image"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/postTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="24dp"
                android:text="@string/post_title"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/profile_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                app:layout_constraintTop_toTopOf="@id/profile_image" />

            <TextView
                android:id="@+id/postBody"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:padding="10dp"
                android:text="@string/post_body"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_image" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="40dp"
                android:background="@color/grey"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <ImageButton
                android:id="@+id/likeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_favorite_border_24"
                android:background="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view"
                android:layout_marginStart="40dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/likeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/likeBtn"
                app:layout_constraintBottom_toBottomOf="@id/likeBtn"
                app:layout_constraintStart_toEndOf="@id/likeBtn"
                android:text="@string/_5_likes"
                android:layout_marginStart="5dp"/>

            <ImageButton
                android:id="@+id/postBtn_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chat"
                android:background="@null"
                app:layout_constraintTop_toTopOf="@id/likeBtn"
                app:layout_constraintBottom_toBottomOf="@id/likeBtn"
                app:layout_constraintStart_toEndOf="@id/likeTxt"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/commentBtnTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/likeBtn"
                app:layout_constraintBottom_toBottomOf="@id/likeBtn"
                app:layout_constraintStart_toEndOf="@id/postBtn_home"
                android:text="@string/_15_comments"
                android:layout_marginStart="5dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>