<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">
    <Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/post_app"
                android:textColor="@color/blue"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </Toolbar>

    <TextView
        android:id="@+id/tvMoments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/moments"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain" />

    <SearchView
        android:id="@+id/searchBtn"
        android:layout_width="0dp"
        android:layout_height="35dp"
        app:layout_constraintStart_toEndOf="@id/tvMoments"
        app:layout_constraintTop_toTopOf="@id/tvMoments"
        app:layout_constraintBottom_toBottomOf="@id/tvMoments"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        style="@style/Widget.AppCompat.Light.SearchView"
        android:visibility="gone"
        android:background="@drawable/search_view_layout"/>

    <ImageButton
        android:id="@+id/filterBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvMoments"
        app:layout_constraintBottom_toBottomOf="@id/tvMoments"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_baseline_filter_list_24"
        android:backgroundTint="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/momentsViewPager"
        android:background="@color/grey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvMoments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/tvLatestPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/latest_posts"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/momentsViewPager" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvLatestPost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavBar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/postRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ImageButton
        android:id="@+id/addPostBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/float_button"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toTopOf="@id/bottomNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/homeBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/ic_outline_home_24"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="40dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/ic_chat"
                android:backgroundTint="@color/white"
                app:layout_constraintStart_toEndOf="@id/homeBtn"
                app:layout_constraintEnd_toStartOf="@id/profileBtn"
                app:layout_constraintTop_toTopOf="@id/homeBtn"
                app:layout_constraintBottom_toBottomOf="@id/profileBtn"/>

            <ImageButton
                android:id="@+id/profileBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/ic_outline_person_24"
                android:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="40dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>




</androidx.constraintlayout.widget.ConstraintLayout>